versioned_docs/version-1.19.0/management/search-engines/index.mdx
---
tags:
  - Search engines
  - Google
  - Search
---

# Search Engines
Using the search engines, terms can be quickly searched simply by opening the search bar at the top.

![](./img/search-engines.png)

It will also work with any sites that search through content (e.g. Netflix, torrent indexers, ...).
It is required that the site has the search term somewhere in the URL.

## Create search engine
To create a custom search engine, you can click the button at the top of the page.

![](./img/create-search-engine.png)

### Name
The name can be chosen freely. It will be displayed in the search box popover.

### Short
Prefix that is used to choose the search engine in the popover using the keyboard.
It is recommended that this value is kept short (for example ``g`` for Google and ``e`` for Ecosia).

### Search template
The template must be a valid URL that incldues the ``%s`` placeholder.
Homarr will replace the ``%s`` with the term that the user entered.

#### Examples
- Google: ``https://www.google.com/search?q=%s``
- Ecosia: ``https://www.ecosia.org/search?q=%s``
- DuckDuckGo: ``https://duckduckgo.com/?q=%s``
- Bing: ``https://www.bing.com/search?q=%s``
- YouTube: ``https://www.youtube.com/results?search_query=%s``